<resources>
    <string name="app_name">Movies</string>
    <string name="btn_retry">Retry</string>
    <string name="download_error">Oh no! Unable to fetch movie data.</string>
    <string name="internet_error">Not connected to internet</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorite">Favorite</string>
    <string name="movie_poster_thumbnail">"Movie Poster Thumbnail"</string>


    <!-- Movie Detail Fragment  -->
    <string name="title">Title</string>
    <string name="original_title">Original Title</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="release_date">Release Date</string>
    <string name="voter_average">Voter Average</string>
    <string name="popularity">Popularity</string>
    <string name="synopsis">Synopsis</string>
    <string name="trailers">Movie Trailers</string>


    <string name="play">Play</string>
    <string name="reviews">Reviews</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>

    <string name="read_more">Read more on review website</string>

    <string name="no_trailer">has no trailers.</string>
    <string name="no_review">has no reviews.</string>

    <string name="border">border</string>
    <string name="star">star</string>
    <string name="add_favorite">Added Favorite</string>
    <string name="remove_favorite">Removed Favorite</string>

    <string name="no_favorites">No Favorite Movies To Display.</string>
    <string name="view_top_rated">View Top Rated Movies</string>
    <string name="view_popular">View Popular Movies</string>


</resources>
